--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Ashwini Jeggari</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Ashwini!</h1>
-				<p>Training myself to get expert with unknowns in <em>Bionformatics</em></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-            <li><a href="mailto:ashwinipriya.jeggari@ki.se">email</a></li>       
-            <li><a href="https://github.com/ashwini06">github.com/ashwini06</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Ashwini Jeggari , PhD student| Bioinformatician
+---
+<div class="blurb">
+	<h1>Hi there, I'm Ashwini!</h1>
+	<p>Training myself to become expertise in analysing<em> next generation sequencing data </em></p>
+</div><!-- /.blurb -->
