--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Ashwini Jeggari , PhD student| Bioinformatician
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Ashwini!</h1>
-	<p>Training myself to become expertise in analysing<em> next generation sequencing data </em></p>
+	<p>Training myself to become expertise in analysing<em> next generation sequencing </em>data </p>
 </div><!-- /.blurb -->
