--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Ashwini Jeggari , PhD student| Bioinformatician
 <div class="blurb">
 	<h1>Welcome</h1>
 	<p>I'm Ashwini Jeggari, a PhD student, Bioinformatician analysing next generation sequening data (eg: RNA-seq, ChIP-seq). Currently I am working in Prof. Johan Ericson Laboratory in the department of Cell and Molecular Biology, Karolinska Instituet. 
-	 Take a look [About page](https://ashwini06.github.io/about) to know more about my educational background.</p>
+	 Take a look on [About](https://ashwini06.github.io/about) to know more about my educational background.</p>
 	<h3>Motto of learning: <em>Patience</em> is the key to learning. Unknown things can be learnt if we have patience. </h3>
 	<p>Training myself to become expertise in analysing<em> next generation sequencing </em>data </p>
 </div><!-- /.blurb -->
